Updated title font.

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
     <title>Play That Note</title>
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tenali+Ramakrishna&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
